# gbpcli_rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  test_rust.yml
src/: api.rs  auth.rs  config.rs  main.rs  repository.rs
src/api/: data.rs  list_accounts.rs
src/repository/: gbp_api.rs
src/repository/gbp_api/: data.rs  list_accounts.rs
