[package]
name = "gbpcli_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json", "form"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dotenvy = "0.15.7"
