[package]
name = "gbpcli_rs"
version = "0.1.0"
edition = "2024"
description = "CLI for Google Business Profile API"
repository = "https://github.com/nasustim/gbpcli_rs"
license = "MIT"

[[bin]]
name = "gbpcli"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.5.58", features = ["derive"] }
reqwest = { version = "=0.13.2", features = ["json", "form", "query"] }
tokio = { version = "=1.49.0", features = ["full"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
dotenvy = "=0.15.7"

[dev-dependencies]
